<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Messages</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Signup!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter username, password and email!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter username and password</string>
    <string name="login_error_title">Sorry, there was an error</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">No Friends. You seem Lonely</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re Sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_extrernal_storage">Error accessing external Storage.</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="cancel_button_label">CANCEL</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string-array name="set_profle_pic_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>

    <string name="video_file_size_warning">Video must be less than 10 mb.</string>
    <string name="error_file_not_found">File Not Found</string>
    <string name="error_ioexception">IOException. Sorry about that</string>
    <string name="error_file_size_too_large">Selected File is too large. Please select another one.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Add some friends first!</string>
    <string name="action_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the selected file. Please choose a different file.</string>
    <string name="error_title_sorry">We\'re Sorry!</string>
    <string name="success_message">Message Sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try Again.</string>
    <string name="title_activity_view_image">Here\'s your message!</string>
    <string name="background_image_description">Login Frog Background Image</string>
    <string name="weone">Snapit</string>
    <string name="subtitle">Snap it if you can!</string>
    <string name="button_divider">Button Divider</string>
    <string name="push_message">You have a new message from %s!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_item_add_profile_picture">Add Profile Picture</string>
    <string name="nav_item_view_profile">View Profile</string>
    <string name="nav_item_edit_friends">Edit Friends</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>
